--- a/components/elasticsearch/Dockerfile
+++ b/components/elasticsearch/Dockerfile
@@ -1,1 +1,5 @@
 FROM elasticsearch
+
+#Install head plugin
+# http://192.168.99.100:9200/_plugin/head/
+RUN /usr/share/elasticsearch/bin/plugin install mobz/elasticsearch-head 
