Mise en place du flux de sauvegarde des fichiers bruts

--- a/components/logstash_position_es/conf/logstash.conf
+++ b/components/logstash_position_es/conf/logstash.conf
@@ -2,6 +2,13 @@ input {
   kafka{
    topic_id => "cff_train_position"
    zk_connect => "kafka:2181"
+   consumer_id => "position_es"
+   group_id => "position_es"
+  }
+}
+filter {
+	mutate {
+    	remove_field => [ "poly" ]
   }
 }
 output{
