--- a/components/logstash_position_archive/Dockerfile
+++ b/components/logstash_position_archive/Dockerfile
@@ -1,4 +1,4 @@
-FROM logstash
+FROM octoch/logstash_data
 
 RUN cd /opt/logstash && bin/plugin install --version 2.0.3 logstash-input-kafka
 ADD conf /config-dir
