--- a/components/node_stationboard_sniffer/package.json
+++ b/components/node_stationboard_sniffer/package.json
@@ -12,6 +12,7 @@
     "lodash": "^3.10.1",
     "promise": "^7.1.1",
     "request-promise": "^1.0.2",
+    "sprintf": "^0.1.5",
     "utf8": "^2.1.1"
   }
 }
