un seul sniff déclenche station board + train position et publie avec 2  différents topics - code refactored

--- a/components/node_cff_realtime_sniffer/package.json
+++ b/components/node_cff_realtime_sniffer/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "encoding": "^0.1.12",
+    "fast-csv": "^1.0.0",
     "kafka-node": "^0.2.29",
     "lodash": "^3.10.1",
     "promise": "^7.1.1",
     "request-promise": "^1.0.2",
+    "sprintf": "^0.1.5",
     "utf8": "^2.1.1"
   }
 }
