logstah_data install the kafka plugin. sniff dev topics are the correct ones

--- a/components/logstash_stop/conf/logstash.conf
+++ b/components/logstash_stop/conf/logstash.conf
@@ -1,6 +1,6 @@
 input {
   kafka{
-   topic_id => "cff_stop"
+   topic_id => "cff_station_board"
    zk_connect => "kafka:2181"
    consumer_id => "stop_es_archive"
    group_id => "stop"
