--- a/components/logstash_data/Dockerfile
+++ b/components/logstash_data/Dockerfile
@@ -1,4 +1,5 @@
-FROM logstash
+FROM logstash:2.1
+RUN cd /opt/logstash && bin/plugin install --version 2.0.3 logstash-input-kafka
 
 
 RUN set -x && \
