Il est maintenant possible (mais pas nécessaire) de démarrer d'autres nœuds elasticsearch pour avoir un vrai cluster (3 nœuds)

--- a/components/logstash_stop/conf/logstash.conf
+++ b/components/logstash_stop/conf/logstash.conf
@@ -12,7 +12,7 @@ output{
   	gzip => true
   }
   elasticsearch {
-    hosts => "elasticsearch"
+    hosts => ["elasticsearch1", "elasticsearch2", "elasticsearch3"]
     index => "cff_stop"
   }
 }
