Correction bug de configuration du cluster ES

--- a/components/logstash_position_es/conf/logstash.conf
+++ b/components/logstash_position_es/conf/logstash.conf
@@ -14,7 +14,7 @@ filter {
 output{
   elasticsearch {
     hosts => "elasticsearch1"
-    hosts_pour_rebalancer_les_requetes => ["elasticsearch1", "elasticsearch2", "elasticsearch3"]
+    #hosts_pour_rebalancer_les_requetes => ["elasticsearch1", "elasticsearch2", "elasticsearch3"]
     index => "cff_train_position"
   }
 }
