--- a/components/web-realtime-viewer/package.json
+++ b/components/web-realtime-viewer/package.json
@@ -12,6 +12,7 @@
     "d3": "^3.5.13",
     "es6-promise": "^3.0.2",
     "express-ws": "^1.0.0-rc.2",
+    "google-map-react": "^0.10.3",
     "kafka-node": "^0.2.30",
     "leaflet": "^0.7.7",
     "lodash": "^4.0.0",
@@ -19,6 +20,7 @@
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-leaflet": "^0.10.0",
+    "react-pure-render": "^1.0.2",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
     "redux-devtools": "^2.1.5",
