streaming position snapshot configuration loaded from a file logging level reduced

--- a/components/spark_streaming_position/conf/application.conf
+++ b/components/spark_streaming_position/conf/application.conf
@@ -1,1 +1,19 @@
-application.log=WARN
+application.log = WARN
+
+spark.master = "local[*]"
+application.name = "cff position spapshot"
+
+spark.logConf = false
+spark.driver.port = 7777
+spark.driver.host = "localhost"
+spark.akka.logLifecycleEvents = true
+
+zookeeper.host = "192.168.99.100"
+zookeeper.port = 2181
+
+kafka.host = "192.168.99.100"
+kafka.port = 9092
+
+kafka.consume.topic = "cff_train_position"
+kafka.consume.group.id = "stream_latest_position_app"
+kafka.produce.topic = "train_position_snapshot"
