--- a/components/web-realtime-viewer/package.json
+++ b/components/web-realtime-viewer/package.json
@@ -17,6 +17,8 @@
     "leaflet": "^0.7.7",
     "lodash": "^4.0.0",
     "materialize-css": "^0.97.5",
+    "promise": "^7.1.1",
+    "request-promise": "^1.0.2",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-leaflet": "^0.10.0",
@@ -25,6 +27,7 @@
     "redux": "^3.0.4",
     "redux-devtools": "^2.1.5",
     "redux-thunk": "^1.0.0",
+    "superagent": "1.4.0",
     "whatwg-fetch": "^0.10.1",
     "ws": "^1.0.1"
   },
