add timestamp to board and boardsofboard map, filter and everything look ok

--- a/components/spark_streaming_position/conf/application.conf
+++ b/components/spark_streaming_position/conf/application.conf
@@ -1,7 +1,7 @@
 application.log = WARN
 
 spark.master = "local[*]"
-application.name = "cff position spapshot"
+application.name = "cff position snapshot"
 
 spark.logConf = false
 spark.driver.port = 7777
@@ -14,6 +14,10 @@ zookeeper.port = 2181
 kafka.host = "192.168.99.100"
 kafka.port = 9092
 
-kafka.consume.topic = "cff_train_position"
-kafka.consume.group.id = "stream_latest_position_app"
-kafka.produce.topic = "train_position_snapshot"
+kafka.train_position.consume.topic = "cff_train_position"
+kafka.train_position.consume.group.id = "stream_latest_position_app"
+kafka.train_position.produce.topic = "train_position_snapshot"
+
+kafka.station_board.consume.topic = "cff_station_board"
+kafka.station_board.consume.group.id = "stream_latest_stationboard_app"
+kafka.station_board.produce.topic = "station_board_snapshot"
