computing station board stats (toal & delay and kafkaing those

--- a/components/spark_streaming_position/conf/application.conf
+++ b/components/spark_streaming_position/conf/application.conf
@@ -20,4 +20,4 @@ kafka.train_position.produce.topic = "train_position_snapshot"
 
 kafka.station_board.consume.topic = "cff_station_board"
 kafka.station_board.consume.group.id = "stream_latest_stationboard_app"
-kafka.station_board.produce.topic = "station_board_snapshot"
+kafka.station_board.produce.topic = "station_board_stats_snapshot"
