--- a/components/spark_streaming_position/conf/application.conf
+++ b/components/spark_streaming_position/conf/application.conf
@@ -8,11 +8,17 @@ spark.driver.port = 7777
 spark.driver.host = "localhost"
 spark.akka.logLifecycleEvents = true
 
-zookeeper.host = "192.168.99.100"
-zookeeper.port = 2181
+#broker.in.zookeeper.host = "52.28.175.241"
+#broker.in.kafka.host = "52.28.175.241"
+broker.in.zookeeper.host = "192.168.99.100"
+broker.in.kafka.host = "192.168.99.100"
+broker.in.zookeeper.port = 2181
+broker.in.kafka.port = 9092
 
-kafka.host = "192.168.99.100"
-kafka.port = 9092
+broker.out.zookeeper.host = "192.168.99.100"
+broker.out.zookeeper.port = 2181
+broker.out.kafka.host = "192.168.99.100"
+broker.out.kafka.port = 9092
 
 kafka.train_position.consume.topic = "cff_train_position"
 kafka.train_position.consume.group.id = "stream_latest_position_app"
@@ -20,4 +26,4 @@ kafka.train_position.produce.topic = "train_position_snapshot"
 
 kafka.station_board.consume.topic = "cff_station_board"
 kafka.station_board.consume.group.id = "stream_latest_stationboard_app"
-kafka.station_board.produce.topic = "station_board_stats_snapshot"
+kafka.station_board.produce.topic = "sb_stats_snapshot"
