--- a/components/web-realtime-viewer/package.json
+++ b/components/web-realtime-viewer/package.json
@@ -13,12 +13,12 @@
     "es6-promise": "^3.0.2",
     "express-ws": "^1.0.0-rc.2",
     "google-map-react": "^0.10.3",
-    "kafka-node": "^0.2.30",
+    "kafka-node": "^0.3.0",
     "leaflet": "^0.7.7",
     "lodash": "^4.0.0",
     "materialize-css": "^0.97.5",
+    "papaparse": "^4.1.2",
     "promise": "^7.1.1",
-    "request-promise": "^1.0.2",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-leaflet": "^0.10.0",
@@ -27,6 +27,7 @@
     "redux": "^3.0.4",
     "redux-devtools": "^2.1.5",
     "redux-thunk": "^1.0.0",
+    "request-promise": "^1.0.2",
     "superagent": "1.4.0",
     "whatwg-fetch": "^0.10.1",
     "ws": "^1.0.1"
