--- a/components/web-realtime-viewer/package.json
+++ b/components/web-realtime-viewer/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "start": "DEBUG=true node server.js",
     "build": "webpack -p --config webpack.production.js",
+    "test-viz": "DEBUG=true NODE_ENV=test-viz node server-test-viz.js",
     "build-dev": "webpack -p",
     "test": "jest"
   },
@@ -20,6 +21,7 @@
     "papaparse": "^4.1.2",
     "promise": "^7.1.1",
     "react": "^0.14.0",
+    "react-dimensions": "^1.0.2",
     "react-dom": "^0.14.0",
     "react-leaflet": "^0.10.0",
     "react-pure-render": "^1.0.2",
@@ -53,6 +55,7 @@
     "react-transform-catch-errors": "^1.0.1",
     "react-transform-hmr": "^1.0.1",
     "redbox-react": "^1.2.0",
+    "redux-mock-store": "^1.0.2",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.11",
     "webpack-dev-middleware": "^1.4.0",
