fixing back logstash.conf on the move to TrainPositionsSpecs

--- a/components/logstash_stop/conf/logstash.conf
+++ b/components/logstash_stop/conf/logstash.conf
@@ -11,5 +11,9 @@ output{
   	path => "/opt/logstash/data/stop/cff-stop-%{+YYYY-MM-dd_HH}.txt.gz"
   	gzip => true
   }
+  elasticsearch {
+   hosts => ["elasticsearch1", "elasticsearch2", "elasticsearch3"]
+   index => "cff_stop"
+  }
 }
 
