--- a/devtools/cff-mock-feeder/Dockerfile
+++ b/devtools/cff-mock-feeder/Dockerfile
@@ -1,10 +1,8 @@
 FROM    node:4.2
 
 ADD . /src
-RUN cd /src; npm rebuild
+RUN cd /src; npm install; npm rebuild
 
 WORKDIR /src
-#CMD ["npm", "start"]
 
 CMD ["npm", "start"]
-	
