--- a/components/web-realtime-viewer/package.json
+++ b/components/web-realtime-viewer/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
     "redux-devtools": "^2.1.5",
+    "redux-logger": "^2.6.1",
     "redux-thunk": "^1.0.0",
     "request-promise": "^1.0.2",
     "superagent": "1.4.0",
