--- a/components/web-realtime-viewer/package.json
+++ b/components/web-realtime-viewer/package.json
@@ -13,11 +13,12 @@
     "d3": "^3.5.13",
     "es6-promise": "^3.0.2",
     "express-ws": "^1.0.0-rc.2",
+    "file-loader": "^0.8.5",
     "google-map-react": "^0.11.0",
     "kafka-node": "^0.3.0",
     "leaflet": "^0.7.7",
     "lodash": "^4.0.0",
-    "materialize-css": "^0.97.5",
+    "materialize-css": "^0.97.6",
     "papaparse": "^4.1.2",
     "promise": "^7.1.1",
     "react": "^0.14.0",
@@ -32,6 +33,7 @@
     "redux-thunk": "^1.0.0",
     "request-promise": "^1.0.2",
     "superagent": "1.4.0",
+    "url-loader": "^0.5.7",
     "whatwg-fetch": "^0.10.1",
     "ws": "^1.0.1"
   },
