--- a/components/web-realtime-viewer/package.json
+++ b/components/web-realtime-viewer/package.json
@@ -28,6 +28,8 @@
     "react-leaflet": "^0.10.0",
     "react-pure-render": "^1.0.2",
     "react-redux": "^4.0.0",
+    "react-router": "^2.3.0",
+    "react-tooltip": "^1.2.0",
     "redux": "^3.0.4",
     "redux-devtools": "^2.1.5",
     "redux-logger": "^2.6.1",
@@ -39,6 +41,7 @@
     "ws": "^1.0.1"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.6",
     "babel-core": "^6.0.0",
     "babel-jest": "^6.0.1",
     "babel-loader": "^6.0.0",
@@ -55,6 +58,8 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "jest-cli": "^0.8.2",
     "path": "^0.12.7",
+    "postcss-loader": "^0.8.2",
+    "precss": "^1.4.0",
     "react-addons-test-utils": "^0.14.6",
     "react-transform-catch-errors": "^1.0.1",
     "react-transform-hmr": "^1.0.1",
