--- a/components/web-realtime-viewer/package.json
+++ b/components/web-realtime-viewer/package.json
@@ -26,6 +26,7 @@
     "react-dimensions": "^1.0.2",
     "react-dom": "^0.14.0",
     "react-leaflet": "^0.10.0",
+    "react-markdown": "^2.2.0",
     "react-pure-render": "^1.0.2",
     "react-redux": "^4.0.0",
     "react-router": "^2.3.0",
@@ -56,7 +57,10 @@
     "cssnext-loader": "^1.0.1",
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^1.0.1",
+    "html-loader": "^0.4.3",
     "jest-cli": "^0.8.2",
+    "json-loader": "^0.5.4",
+    "markdown-loader": "^0.1.7",
     "path": "^0.12.7",
     "postcss-loader": "^0.8.2",
     "precss": "^1.4.0",
