fighting with docker...

--- a/components/play-realtime/conf/application-docker.conf
+++ b/components/play-realtime/conf/application-docker.conf
@@ -1,5 +1,8 @@
 application.log = WARN
 
+#this shall NOT be here (cause it's public) - but in another sense, there is nothing to compromise on that app
+play.crypto.secret="@Pr4>BKHd4>ivCswgy6[Gl;xSMI@EtP19Dij]yp?Djer<xs=r^kcXTkrP>4>JJIl"
+
 spark.master = "local[*]"
 application.name = "cff position spapshot"
 
