--- a/components/play-realtime/conf/application.conf
+++ b/components/play-realtime/conf/application.conf
@@ -1,5 +1,7 @@
 application.log = WARN
 
+play.crypto.secret="change_me_duh"
+
 spark.master = "local[*]"
 application.name = "cff position snapshot"
 
@@ -8,17 +10,10 @@ spark.driver.port = 7777
 spark.driver.host = "localhost"
 spark.akka.logLifecycleEvents = true
 
-broker.in.zookeeper.host = "52.28.175.241"
-broker.in.kafka.host = "52.28.175.241"
-#broker.in.zookeeper.host = "192.168.99.100"
-#broker.in.kafka.host = "192.168.99.100"
-broker.in.zookeeper.port = 2181
-broker.in.kafka.port = 9092
-
-broker.out.zookeeper.host = "192.168.99.100"
-broker.out.zookeeper.port = 2181
-broker.out.kafka.host = "192.168.99.100"
-broker.out.kafka.port = 9092
+zookeeper.host = "52.28.175.241"
+kafka.host = "52.28.175.241"
+zookeeper.port = 2181
+kafka.port = 9092
 
 kafka.train_position.consume.topic = "cff_train_position"
 kafka.train_position.consume.group.id = "stream_latest_position_app"
