--- a/components/web-realtime-viewer/.dockerignore
+++ b/components/web-realtime-viewer/.dockerignore
@@ -1,11 +1,7 @@
+node_modules/
 /pouch__all_dbs__
 /skimdb
-.DS_Store
-dist/**
-node_modules/
-.idea
-*.iml
 /_replicator
 /binarydb
 /_users
-static
+public/
