fighting with docker-compose stability

--- a/components/web-realtime-viewer/package.json
+++ b/components/web-realtime-viewer/package.json
@@ -18,11 +18,12 @@
     "fbjs": "^0.6.1",
     "file-loader": "^0.8.5",
     "google-map-react": "^0.11.0",
-    "isomorphic-fetch":"^2.2.1",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.0.0",
     "materialize-css": "^0.97.6",
     "papaparse": "^4.1.2",
     "promise": "^7.1.1",
+    "promise-retry": "^1.1.0",
     "react": "^0.14.0",
     "react-dimensions": "^1.0.2",
     "react-dom": "^0.14.0",
@@ -36,7 +37,6 @@
     "redux-devtools": "^2.1.5",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^1.0.0",
-    "request-promise": "^1.0.2",
     "superagent": "1.4.0",
     "url-loader": "^0.5.7",
     "whatwg-fetch": "^0.10.1",
