--- a/components/node_cff_sniff/package.json
+++ b/components/node_cff_sniff/package.json
@@ -11,6 +11,7 @@
     "kafka-node": "^0.3.2",
     "lodash": "^3.10.1",
     "promise": "^7.1.1",
+    "promise-retry": "^1.1.0",
     "request-promise": "^1.0.2",
     "sprintf": "^0.1.5",
     "utf8": "^2.1.1"
