--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - "9092:9092"
       - "2181:2181"
     environment:
+      KAFKA_CREATE_TOPICS: "cff_train_position:2:1,cff_station_board:2:1"
       ADVERTISED_PORT: 9092
       ADVERTISED_HOST: 192.168.99.100
 #      KAFKA_CREATE_TOPICS: cff_train_position:1:1
@@ -20,6 +21,8 @@ services:
       - "81:9000"
     links:
       - kafka
+    ports:
+      - "81:81"
   cff_feeder:
     build: components/node_cff_sniff
     environment:
