--- a/components/play-realtime/conf/application.conf
+++ b/components/play-realtime/conf/application.conf
@@ -10,15 +10,11 @@ spark.driver.port = 7777
 spark.driver.host = "localhost"
 spark.akka.logLifecycleEvents = true
 
-zookeeper.host = "52.28.175.241"
-kafka.host = "52.28.175.241"
+//zookeeper.host = "52.28.175.241"
+//kafka.host = "52.28.175.241"
+zookeeper.host = "192.168.99.100"
+kafka.host = "192.168.99.100"
 zookeeper.port = 2181
 kafka.port = 9092
 
-kafka.train_position.consume.topic = "cff_train_position"
-kafka.train_position.consume.group.id = "stream_latest_position_app"
-kafka.train_position.produce.topic = "train_position_snapshot"
-
-kafka.station_board.consume.topic = "cff_station_board"
-kafka.station_board.consume.group.id = "stream_latest_stationboard_app"
-kafka.station_board.produce.topic = "sb_stats_snapshot"
+kafka.consume.group.id = "stream_latest_stationboard_app"
