--- a/devtools/cff-mock-feeder/docker-compose.yml
+++ b/devtools/cff-mock-feeder/docker-compose.yml
@@ -1,18 +1,22 @@
 version: '2'
 services:
+  zookeeper:
+    image: wurstmeister/zookeeper
+    ports:
+      - "2181:2181"
   kafka:
-    image: spotify/kafka
+    image: wurstmeister/kafka
     ports:
       - "9092:9092"
-      - "2181:2181"
+    links:
+      - zookeeper:zk
     environment:
-      ADVERTISED_PORT: 9092
-      ADVERTISED_HOST: 192.168.99.100
-#      KAFKA_CREATE_TOPICS: cff_train_position:1:1
-      AUTO_CREATE_TOPIC_ENABLE: true
+      KAFKA_ADVERTISED_HOST_NAME: "192.168.99.100"
+      KAFKA_CREATE_TOPICS: "cfftrainposition:1:1,cffstationboard:1:1"
       LOG_RETENTION_HOURS_PER_TOPIC: 0.1
+      KAFKA_ZOOKEEPER_CONNECT: zk:2181
     volumes:
-        - /var/run/docker.sock:/var/run/docker.sock
+      - /var/run/docker.sock:/var/run/docker.sock
   cff-mock-feeder:
     build: .
     depends_on:
