--- a/devtools/cff-mock-feeder/package.json
+++ b/devtools/cff-mock-feeder/package.json
@@ -11,8 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "encoding": "^0.1.12",
-    "kafka-node": "^0.3.1",
     "lodash": "^4.3.0",
+    "no-kafka": "^2.5.0",
     "promise": "^7.1.1",
     "utf8": "^2.1.1"
   }
