--- a/components/web-realtime-viewer/docker/nginx.conf
+++ b/components/web-realtime-viewer/docker/nginx.conf
@@ -5,13 +5,13 @@ server {
   #charset koi8-r;
   #access_log  /var/log/nginx/log/host.access.log  main;
 
+  location /api/ {
+    proxy_pass http://streaming_backend:9000/;
+      access_log  off;
+  }
   location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
-  }
-  location /api {
-    proxy_pass http://streaming_backend:9000;
-    access_log  off;
   }
   #error_page  404              /404.html;
 
