--- a/components/nginx/Dockerfile
+++ b/components/nginx/Dockerfile
@@ -1,6 +1,7 @@
 FROM nginx
+MAINTAINER Alexandre Masselot <alexandre.masselot@gmail.com>
 
-COPY docker/docker-fontend.json /usr/share/nginx/html/config.json
-COPY docker/nginx.conf /etc/nginx/conf.d/default.conf
+COPY config/docker-fontend.json /usr/share/nginx/html/config.json
+COPY config/nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
