--- a/components/nginx/config/nginx.conf
+++ b/components/nginx/config/nginx.conf
@@ -5,14 +5,17 @@ server {
   #charset koi8-r;
   #access_log  /var/log/nginx/log/host.access.log  main;
 
+
   location /api/ {
 	  proxy_pass http://streaming_backend:9000/;
       access_log  off;
   }
+
   location / {
-      proxy_pass http://web_realtime_viewer/;
-      access_log  off;
+      proxy_pass http://web_realtime_viewer:80/;
+      #access_log  off;
   }
+
   #error_page  404              /404.html;
 
   # redirect server error pages to the static page /50x.html
