--- a/components/web-realtime-viewer/Dockerfile
+++ b/components/web-realtime-viewer/Dockerfile
@@ -1,4 +1,6 @@
-FROM node:4.2
+FROM node:argon
+MAINTAINER Alexandre Masselot <alexandre.masselot@gmail.com>
+
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
@@ -8,7 +10,8 @@ COPY package.json /usr/src/app/
 RUN npm install
 
 RUN npm run build
-EXPOSE 8080
-CMD [ "npm", "start" ]
+EXPOSE 80
+
+CMD [ "npm", "run", "prod"]
 
 
