updated scala libraries favicon repackaged docker deployed to GCE

--- a/components/play-realtime/conf/application-docker.conf
+++ b/components/play-realtime/conf/application-docker.conf
@@ -18,3 +18,25 @@ kafka.host = "kafka"
 kafka.port = 9092
 
 kafka.consume.group.id = "stream_latest_position_app"
+
+akka.kafka.consumer {
+  poll-interval = 50ms
+
+  poll-timeout = 50ms
+
+  stop-timeout = 30s
+
+  close-timeout = 20s
+
+  commit-timeout = 15s
+
+  wakeup-timeout = 20s
+
+  max-wakeups = 10
+
+  use-dispatcher = "akka.kafka.default-dispatcher"
+
+  kafka-clients {
+    enable.auto.commit = false
+  }
+}
