--- a/components/nginx/config/nginx.conf
+++ b/components/nginx/config/nginx.conf
@@ -13,7 +13,7 @@ server {
 
   location / {
       proxy_pass http://web_realtime_viewer:80/;
-      #access_log  off;
+      access_log  off;
   }
 
   #error_page  404              /404.html;
