--- a/components/play-realtime/conf/application.conf
+++ b/components/play-realtime/conf/application.conf
@@ -12,9 +12,33 @@ spark.akka.logLifecycleEvents = true
 
 //zookeeper.host = "52.28.175.241"
 //kafka.host = "52.28.175.241"
-zookeeper.host = "192.168.99.100"
-kafka.host = "192.168.99.100"
+zookeeper.host = "zookeeper"
+kafka.host = "kafka"
 zookeeper.port = 2181
 kafka.port = 9092
 
 kafka.consume.group.id = "stream_latest_stationboard_app"
+
+kafka.consume.group.id = "stream_latest_position_app"
+
+akka.kafka.consumer {
+  poll-interval = 50ms
+
+  poll-timeout = 50ms
+
+  stop-timeout = 30s
+
+  close-timeout = 20s
+
+  commit-timeout = 15s
+
+  wakeup-timeout = 20s
+
+  max-wakeups = 10
+
+  use-dispatcher = "akka.kafka.default-dispatcher"
+
+  kafka-clients {
+    enable.auto.commit = false
+  }
+}
