--- a/components/web-realtime-viewer/package.json
+++ b/components/web-realtime-viewer/package.json
@@ -19,9 +19,11 @@
     "fbjs": "^0.6.1",
     "file-loader": "^0.8.5",
     "google-map-react": "^0.20.0",
+    "install": "^0.8.1",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.0.0",
     "materialize-css": "^0.97.6",
+    "npm": "^3.10.8",
     "papaparse": "^4.1.2",
     "promise": "^7.1.1",
     "promise-retry": "^1.1.0",
@@ -33,6 +35,7 @@
     "react-pure-render": "^1.0.2",
     "react-redux": "^4.0.0",
     "react-router": "^2.3.0",
+    "react-share": "^1.10.0",
     "react-tooltip": "^1.2.0",
     "redux": "^3.0.4",
     "redux-devtools": "^2.1.5",
