filter trip position (on agencyId) complete set  - bus + PostAuto takes 3.5 minutes to generate all simulated positions

--- a/components/play-realtime/.gitignore
+++ b/components/play-realtime/.gitignore
@@ -19,3 +19,5 @@ project/plugins/project/
 # Scala-IDE specific
 .scala_dependencies
 .worksheet
+/src/main/resources/gtfs_train/
+/src/main/resources/gtfs_complete/
