before moving out the simulation

--- a/components/play-realtime/conf/application.conf
+++ b/components/play-realtime/conf/application.conf
@@ -17,6 +17,8 @@ kafka.host = "kafka"
 zookeeper.port = 2181
 kafka.port = 9092
 
+gtfs.system.path = "src/main/resources/gtfs_gondola"
+
 kafka.consume.group.id = "stream_latest_stationboard_app"
 
 kafka.consume.group.id = "stream_latest_position_app"
